Enemigo bomber, spawner y espora (#38)
* Clase boss1 creada

* Enemigo movimiento sinusoidal (#35)

* Inicio movimiento

* Movimiento sinusoidal hecho falta seguimiento del jugador

* Pruebas ondas

* Cosas raras

* Pruebas

* Version 1

* Arreglos

* BAiA

* Danya al jugador

* Nuevo movimiento

* Spawner enemy y bomber (#37)

* Puedes generar nuevos enemigos

* Añadido el enemigo spawner

* Implementado SpawnerEnemy (no funciona del todo)

* Spawner Enemy v2

* SpawnerEnemy (vFinal sin animaciones)

* arreglado bug (descubierto por miriam)

* Mejorado a sensor

* Bomber enemy (#36)

* primera subida

* Bala explosiva hecha

* Bomber finished

--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj
@@ -132,10 +132,14 @@
     <ClCompile Include="BasicPistol.cpp" />
     <ClCompile Include="BasicShotgun.cpp" />
     <ClCompile Include="BodyComponent.cpp" />
+    <ClCompile Include="BomberEnemy.cpp" />
     <ClCompile Include="BulletPool.cpp" />
+    <ClCompile Include="Capsule.cpp" />
     <ClCompile Include="Cursor.cpp" />
     <ClCompile Include="DistanceEnemy.cpp" />
     <ClCompile Include="EnemyArm.cpp" />
+    <ClCompile Include="ExplosiveBullet.cpp" />
+    <ClCompile Include="FlyingEnemy.cpp" />
     <ClCompile Include="MovingComponent.cpp" />
     <ClCompile Include="MeleeBox.cpp" />
     <ClCompile Include="MeleeWeapon.cpp" />
@@ -184,6 +188,7 @@
     <ClCompile Include="PlayStateHUD.cpp" />
     <ClCompile Include="PoolWrapper.cpp" />
     <ClCompile Include="RenderComponent.cpp" />
+    <ClCompile Include="SpawnerEnemy.cpp" />
     <ClCompile Include="SpriteComponent.cpp" />
     <ClCompile Include="Money.cpp" />
     <ClCompile Include="TextUI.cpp" />
@@ -205,9 +210,13 @@
     <ClInclude Include="BasicPistol.h" />
     <ClInclude Include="BasicShotgun.h" />
     <ClInclude Include="BodyComponent.h" />
+    <ClInclude Include="BomberEnemy.h" />
+    <ClInclude Include="Capsule.h" />
     <ClInclude Include="Cursor.h" />
     <ClInclude Include="DistanceEnemy.h" />
     <ClInclude Include="EnemyArm.h" />
+    <ClInclude Include="ExplosiveBullet.h" />
+    <ClInclude Include="FlyingEnemy.h" />
     <ClInclude Include="MovingComponent.h" />
     <ClInclude Include="ObjectPool.h" />
     <ClInclude Include="MeleeBox.h" />
@@ -263,6 +272,7 @@
     <ClInclude Include="PoolWrapper.h" />
     <ClInclude Include="RenderComponent.h" />
     <ClInclude Include="SDLError.h" />
+    <ClInclude Include="SpawnerEnemy.h" />
     <ClInclude Include="SpriteComponent.h" />
     <ClInclude Include="Money.h" />
     <ClInclude Include="TextUI.h" />
